--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "scripts": {
-        "startDev": "nodemon ./server.js"
+        "startDev": "nodemon src/server.js"
     },
     "dependencies": {
         "mongoose": "^5.9.28",
